# claude-productivity

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
claude_productivity/: analyzer.py  claude_client.py  db.py  exporter.py  i18n.py  jsonl_reader.py  prefs.py  suggestions.py
claude_productivity/tui/: app.py
docs/: enrichment-plan.md  i18n-study.md  suggestions-feature.md
hooks/: logger.py
